# stratum

./: .dockerignore  .gitignore  404.html  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md  book.toml  index.html  installation.html  justfile  print.html  searcher-c2a407aa.js  searchindex-06b2c33e.js  searchindex-08650236.js  searchindex-0d6a328a.js  searchindex-1385bc51.js  searchindex-4d90a1ab.js  searchindex-b2c90539.js  searchindex-d99b982a.js  toc-22706313.js  toc-521f66e1.js  toc.html  troubleshooting.html
.github/workflows/: ci.yml  docker.yml  homebrew-bottles.yml  homebrew-update.yml  release.yml  vscode-extension.yml
assets/: icon.icns
crates/stratum-cli/: Cargo.toml
crates/stratum-cli/src/: add.rs  dap.rs  extension.rs  init.rs  main.rs  publish.rs  remove.rs  repl.rs  self_cmd.rs  update.rs
crates/stratum-core/: Cargo.toml
crates/stratum-core/benches/: data_operations.rs
crates/stratum-core/src/: lib.rs  testing.rs  testutil.rs
crates/stratum-core/src/aot/: compiler.rs  linker.rs  mod.rs  runtime.rs
crates/stratum-core/src/ast/: comment.rs  expr.rs  item.rs  mod.rs  pretty.rs  stmt.rs  types.rs
crates/stratum-core/src/bytecode/: chunk.rs  compiler.rs  debug.rs  error.rs  mod.rs  opcode.rs  value.rs
crates/stratum-core/src/coverage/: mod.rs
crates/stratum-core/src/data/: cube.rs  dataframe.rs  error.rs  grouped.rs  io.rs  join.rs  lazy.rs  memory.rs  mod.rs  parallel.rs  series.rs  sql.rs  types.rs
crates/stratum-core/src/doc/: crosslink.rs  extractor.rs  html.rs  markdown.rs  mod.rs  project.rs  search.rs  types.rs
crates/stratum-core/src/formatter/: mod.rs
crates/stratum-core/src/gc/: mod.rs
crates/stratum-core/src/jit/: compiler.rs  mod.rs  runtime.rs  types.rs
crates/stratum-core/src/lexer/: mod.rs  span.rs  token.rs
crates/stratum-core/src/parser/: error.rs  mod.rs
crates/stratum-core/src/types/: checker.rs  env.rs  error.rs  inference.rs  mod.rs  narrowing.rs
crates/stratum-core/src/vm/: debug.rs  error.rs  executor.rs  mod.rs  natives.rs  output.rs
crates/stratum-core/tests/: data_integration.rs
crates/stratum-gui/: Cargo.toml
crates/stratum-gui/examples/: counter.rs  cube_dashboard.rs  cube_dashboard_large.rs  generate_sales_data.rs  todo.rs  verification.rs
crates/stratum-gui/src/: bindings.rs  callback.rs  charts.rs  element.rs  error.rs  layout.rs  lib.rs  lifecycle.rs  modal.rs  natives.rs  runtime.rs  state.rs  theme.rs  widgets.rs  window.rs
crates/stratum-lsp/: Cargo.toml
crates/stratum-lsp/src/: backend.rs  cache.rs  code_actions.rs  completions.rs  definition.rs  diagnostics.rs  document_symbols.rs  formatting.rs  hover.rs  lib.rs  references.rs  rename.rs  signature_help.rs  workspace_symbols.rs
crates/stratum-pkg/: Cargo.toml
crates/stratum-pkg/src/: lib.rs  lockfile.rs  manifest.rs  package.rs  registry.rs  resolve.rs  workspace.rs
crates/stratum-workshop/: Cargo.toml
crates/stratum-workshop/src/: config.rs  debug.rs  execution.rs  highlight.rs  lib.rs  main.rs  workshop.rs
crates/stratum-workshop/src/panels/: data_explorer.rs  debug.rs  editor.rs  file_browser.rs  mod.rs  output.rs  repl.rs
crates/stratum-workshop/src/widgets/: code_editor.rs  mod.rs
docker/: Dockerfile.core  Dockerfile.full  README.md
docs/: SUMMARY.md  index.md  installation.md  troubleshooting.md
docs/examples/: advanced.md  index.md  intermediate.md  simple.md
docs/stdlib/: _template.md  agg.md  args.md  async.md  base64.md  crypto.md  cube.md  data.md  datetime.md  db.md  dir.md  duration.md  env.md  file.md  globals.md  gui.md  gzip.md  hash.md  http.md  image.md  index.md  input.md  join.md  json.md  list.md  log.md  map.md  math.md  path.md  process.md  random.md  regex.md  set.md  shell.md  signal.md  string.md  system.md  tcp.md  test.md  time.md  (+9 more)
editors/vscode/stratum/: .eslintrc.json  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/stratum/snippets/: stratum.json
editors/vscode/stratum/src/: debugAdapter.ts  extension.ts  taskProvider.ts
editors/vscode/stratum/syntaxes/: stratum.tmLanguage.json
editors/vscode/stratum/test/: grammar.test.ts  sample.strat  taskProvider.test.ts
examples/: README.md  advanced.html  counter.strat  data_dashboard.strat  index.html  intermediate.html  olap_dashboard.strat  simple.html
examples/advanced/: csv_processor.strat  data_analysis.strat  earthquake_analytics.strat  todo_app.strat  web_scraper.strat
examples/simple/: factorial.strat  fibonacci.strat  fizzbuzz.strat  variables.strat
examples/stratum-examples/advanced/: csv_processor.strat  data_analysis.strat  todo_app.strat  web_scraper.strat
examples/stratum-examples/simple/: factorial.strat  fibonacci.strat  fizzbuzz.strat  hello_world.strat  variables.strat
homebrew/: README.md  RUNBOOK.md
homebrew/Formula/: stratum.rb
scripts/: deploy-docs.sh  install.sh  release.sh  uninstall.sh
stdlib/: agg.html  args.html  async.html  base64.html  crypto.html  cube.html  data.html  datetime.html  db.html  dir.html  duration.html  env.html  file.html  globals.html  gui.html  gzip.html  hash.html  http.html  image.html  index.html  input.html  join.html  json.html  list.html  log.html  map.html  math.html  path.html  process.html  random.html  regex.html  set.html  shell.html  signal.html  string.html  system.html  tcp.html  test.html  time.html  toml.html  (+8 more)
tests/: coverage_test.strat  dogfooding.strat  top_level_final.strat
