[workspace]
members = [
    "crates/stratum-core",
    "crates/stratum-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cache McClure <cache@horizonanalytic.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/horizonanalytic/stratum"
rust-version = "1.75"

[workspace.dependencies]
# Shared dependencies will be added here as needed
thiserror = "2"
anyhow = "1"
logos = "0.14"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
