[workspace]
members = [
    "crates/stratum-core",
    "crates/stratum-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cache McClure <cache@horizonanalytic.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/horizonanalytic/stratum"
rust-version = "1.75"

[workspace.dependencies]
# Shared dependencies will be added here as needed
thiserror = "2"
anyhow = "1"
logos = "0.14"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Data encoding
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
base64 = "0.22"
percent-encoding = "2"

# DateTime
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Regex
regex = "1"

# Hashing & Crypto
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
hex = "0.4"

# UUID
uuid = { version = "1", features = ["v4", "v7", "fast-rng"] }

# Random
rand = "0.8"

# System Info
sysinfo = "0.32"

# User Input
rpassword = "7"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
postgres = "0.19"
mysql = "25"
duckdb = { version = "1.1", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
r2d2_postgres = "0.18"
r2d2_mysql = "25"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
