[workspace]
members = [
    "crates/stratum-core",
    "crates/stratum-cli",
    "crates/stratum-gui",
    "crates/stratum-lsp",
    "crates/stratum-pkg",
    "crates/stratum-workshop",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cache McClure <cache@horizonanalytic.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/horizonanalytic/stratum"
rust-version = "1.75"

[workspace.dependencies]
# Shared dependencies will be added here as needed
thiserror = "2"
anyhow = "1"
logos = "0.14"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Data encoding
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
base64 = "0.22"
percent-encoding = "2"

# DateTime
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Regex
regex = "1"

# Versioning & Globs
semver = { version = "1", features = ["serde"] }
glob = "0.3"

# Compression
flate2 = "1.1"
zip = { version = "2.4", default-features = false, features = ["deflate"] }

# Hashing & Crypto
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
hex = "0.4"
aes-gcm = "0.10"
pbkdf2 = "0.12"

# UUID
uuid = { version = "1", features = ["v4", "v7", "fast-rng"] }

# Random
rand = "0.8"

# System Info
sysinfo = "0.32"

# User Input
rpassword = "7"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
postgres = "0.19"
mysql = "25"
duckdb = { version = "1.1", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
r2d2_postgres = "0.18"
r2d2_mysql = "25"

# Async runtime
tokio = { version = "1", features = ["rt", "time", "sync", "net", "io-util"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# JIT/AOT compilation (Cranelift)
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-jit = "0.116"
cranelift-object = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.12"

# Linking for AOT
cc = "1.0"

# DataFrame / Arrow (Phase 4)
arrow = { version = "56", features = ["prettyprint"] }
arrow-schema = "56"
arrow-array = "56"
arrow-cast = "56"
arrow-csv = "56"
arrow-json = "56"
parquet = { version = "56", features = ["arrow", "async"] }
datafusion = "50"

# OLAP Cube (Phase 4A)
elasticube-core = { path = "../elasticube_library/elasticube-core" }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# GUI Framework (iced)
iced = { version = "0.14", features = ["canvas", "tokio", "advanced"] }

# LSP Server
tower-lsp = "0.20"

[workspace.lints.rust]
# Use deny instead of forbid to allow JIT module to use unsafe
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
