[package]
name = "stratum-cli"
description = "Command-line interface for the Stratum programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "stratum"
path = "src/main.rs"

[dependencies]
stratum-core = { path = "../stratum-core" }
stratum-lsp = { path = "../stratum-lsp" }
stratum-pkg = { path = "../stratum-pkg" }
stratum-workshop = { path = "../stratum-workshop" }
anyhow.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rustyline = "15"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
