[package]
name = "stratum-cli"
description = "Command-line interface for the Stratum programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "stratum"
path = "src/main.rs"

[dependencies]
stratum-core = { path = "../stratum-core" }
stratum-gui = { path = "../stratum-gui" }
stratum-lsp = { path = "../stratum-lsp" }
stratum-pkg = { path = "../stratum-pkg" }
stratum-workshop = { path = "../stratum-workshop" }
anyhow.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rustyline = "15"
clap = { version = "4", features = ["derive"] }

# For publish command
flate2.workspace = true
tar = "0.4"
semver.workspace = true

# For debug adapter protocol
dap = "0.4.1-alpha1"
serde_json.workspace = true

# For extension command
dirs = "5"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
