[package]
name = "stratum-core"
description = "Core language engine for the Stratum programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
logos.workspace = true

[dev-dependencies]

[lints]
workspace = true
