[package]
name = "stratum-core"
description = "Core language engine for the Stratum programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
logos.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
serde_yaml.workspace = true
base64.workspace = true
percent-encoding.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
regex.workspace = true
sha2.workspace = true
md-5.workspace = true
hmac.workspace = true
hex.workspace = true
aes-gcm.workspace = true
pbkdf2.workspace = true
flate2.workspace = true
zip.workspace = true
uuid.workspace = true
rand.workspace = true
rpassword.workspace = true
sysinfo.workspace = true
tempfile.workspace = true
rusqlite.workspace = true
postgres.workspace = true
mysql.workspace = true
duckdb.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
r2d2_postgres.workspace = true
r2d2_mysql.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true

# DataFrame / Arrow
arrow.workspace = true
arrow-schema.workspace = true
arrow-array.workspace = true
arrow-cast.workspace = true
arrow-csv.workspace = true
arrow-json.workspace = true
parquet.workspace = true
datafusion.workspace = true

# OLAP Cube
elasticube-core.workspace = true

# XML parsing with XPath
sxd-document.workspace = true
sxd-xpath.workspace = true

# Image processing
image.workspace = true
imageproc.workspace = true

# Parallel processing
rayon.workspace = true

# JIT/AOT compilation
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-module.workspace = true
cranelift-jit.workspace = true
cranelift-object.workspace = true
cranelift-native.workspace = true
target-lexicon.workspace = true
cc.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "data_operations"
harness = false

[lints]
workspace = true
