[package]
name = "stratum-pkg"
description = "Package management for the Stratum programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
semver.workspace = true
glob.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
