[package]
name = "stratum-pkg"
description = "Package management for the Stratum programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
semver.workspace = true
glob.workspace = true

# Registry support
reqwest.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
flate2.workspace = true
tar = "0.4"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
